--- a/k8s/frontend/frontend-service.yaml
+++ b/k8s/frontend/frontend-service.yaml
@@ -10,5 +10,6 @@ spec:
     - name: http
       port: 80
       targetPort: 80
+      nodePort: 31800
       protocol: TCP
-  type: LoadBalancer
+  type: NodePort
