[CI] Update backend image tag

--- a/k8s/backend/backend-deployment.yaml
+++ b/k8s/backend/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: quiz
       containers:
         - name: quiz
-          image: bindasp/quiz-backend:latest
+          image: bindasp/quiz-backend:16994204161
           ports: 
             - containerPort: 5000
           envFrom:
