--- a/k8s/backend/backend-external-secrets.yaml
+++ b/k8s/backend/backend-external-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: backend-secret
+  namespace: quiz
 spec:
   refreshInterval: 1h
   secretStoreRef:
@@ -13,3 +14,5 @@ spec:
   dataFrom:
   - extract:
       key: quizapp-rds
+  - extract:
+      key: quizapp-jwt
