--- a/k8s/secretstore.yaml
+++ b/k8s/secretstore.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
   name: quiz-secretstore
+  namespace: quiz
 spec:
   provider:
     aws:
