added job to init db

--- a/k8s/backend/backend-external-secrets.yaml
+++ b/k8s/backend/backend-external-secrets.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend-secret
   namespace: quiz
 spec:
-  refreshInterval: 1h
+  refreshInterval: 5m
   secretStoreRef:
     name: quiz-secretstore
     kind: SecretStore
