--- a/k8s/backend/backend-external-secrets.yaml
+++ b/k8s/backend/backend-external-secrets.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   refreshInterval: 5m
   secretStoreRef:
-    name: quiz-secretstore
-    kind: SecretStore
+    name: aws-secretstore
+    kind: ClusterSecretStore
   target:
     name: backend-secret
     creationPolicy: Owner
