--- a/k8s/clustersecretstore.yaml
+++ b/k8s/clustersecretstore.yaml
@@ -1,8 +1,7 @@
 apiVersion: external-secrets.io/v1
-kind: SecretStore
+kind: ClusterSecretStore
 metadata:
-  name: quiz-secretstore
-  namespace: quiz
+  name: aws-secretstore
 spec:
   provider:
     aws:
@@ -13,6 +12,8 @@ spec:
           accessKeyIDSecretRef:
             name: awssm-secret
             key: access-key
+            namespace: external-secrets
           secretAccessKeySecretRef:
             name: awssm-secret
             key: secret-access-key
+            namespace: external-secrets
