--- a/k8s/frontend/kustomization.yaml
+++ b/k8s/frontend/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - frontend-deployment.yaml
-  - frontend-service.yaml
-  - frontend-config.yaml
-  - frontend-hpa.yaml
-  - ingress.yaml
+- frontend-deployment.yaml
+- frontend-service.yaml
+- frontend-config.yaml
+- frontend-hpa.yaml
+- ingress.yaml
 
 images:
-  - name: bindasp/quiz-frontend
-    newName: bindasp/quiz-frontend
-    newTag: latest
+- name: bindasp/quiz-frontend
+  newName: bindasp/quiz-frontend
+  newTag: "17588176453"
