--- a/k8s/backend/kustomization.yaml
+++ b/k8s/backend/kustomization.yaml
@@ -2,13 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - backend-deployment.yaml
-  - backend-service.yaml
-  - backend-config.yaml
-  - backend-hpa.yaml
-  - backend-external-secrets.yaml
+- backend-deployment.yaml
+- backend-service.yaml
+- backend-config.yaml
+- backend-hpa.yaml
+- backend-external-secrets.yaml
 
 images:
-  - name: bindasp/quiz-backend
-    newName: bindasp/quiz-backend
-    newTag: latest
+- name: bindasp/quiz-backend
+  newName: bindasp/quiz-backend
+  newTag: latest
+- name: bindasp/quiz-frontend
+  newName: bindasp/quiz-frontend
+  newTag: "17590813574"
